style.css
body {
    margin: auto;
    display: flex;
    flex-direction: column;
    font-family: Verdana, sans-serif;
    max-width: 1200px;
    
}

header {
    background-color: rgb(222, 228, 233);
    display: flex;
    align-items: center;
    justify-content: center;
    color: rgb(97, 10, 50);
}
.name {
margin: 10px;
text-transform: uppercase;
}

h1{
    font-size: 44px;
}

h4 {
    font-size: 14px;
}

h2 {
    font-size: 24px;
}

h3 {
    font-size: 34px; 
}

main {
    background-color: rgb(236, 236, 238);

}

pre {
    font-family: Verdana, monospace;
    background-color: rgb(170, 170, 172);

}

footer {
    background-color: rgb(222, 228, 233);
    display: flex;
    align-items: center;
    justify-content: space-around;
    flex-direction: row;
    color: rgb(97, 10, 50);
}

